--- a/info/templates/news/detail.html
+++ b/info/templates/news/detail.html
@@ -31,24 +31,82 @@
         <a href="javascript:;" class="collected block-center" data-newid="{{ data.news.id }}" style="display: {% if data.is_collected %}block{% else %}none{% endif %}; margin: 0px auto;"><span class="out">已收藏</span><span class="over">取消收藏</span></a>
 
 
-        <div class="comment_form_logout">
-            登录发表你的评论
-        </div>
-
-        <form action="" class="comment_form">
-            <div class="person_pic">
-                <img src="../../static/news/images/cat.jpg" alt="用户图标">
+        {# 判断用户是否有登陆 #}
+        {% if data.user_info %}
+            <form action="" class="comment_form" data-newsid="{{ data.news.id }}">
+                <div class="person_pic">
+                    <img src="../../static/news/images/cat.jpg" alt="用户图标">
+                </div>
+                <textarea placeholder="请发表您的评论" class="comment_input"></textarea>
+                <input type="submit" name="" value="评 论" class="comment_sub">
+            </form>
+        {% else %}
+            <div class="comment_form_logout">
+                登录发表你的评论
             </div>
-            <textarea placeholder="请发表您的评论" class="comment_input"></textarea>
-            <input type="submit" name="" value="评 论" class="comment_sub">
-        </form>
+        {% endif %}
+
+
+
 
 
         <div class="comment_count">
-            4条评论
+            {{ data.news.comments_count }}条评论
         </div>
 
         <div class="comment_list_con">
+
+            {# 遍历所有的评论 #}
+            {% for comment in data.comments %}
+                <div class="comment_list">
+                    <div class="person_pic fl">
+                        {# 判断评论的用户是否有头像 #}
+                        {% if comment.user.avatar_url %}
+                            <img src="{{ comment.user.avatar_url }}" alt="用户图标">
+                        {% else %}
+                            <img src="../../static/news/images/worm.jpg" alt="用户图标">
+                        {% endif %}
+
+                    </div>
+                    <div class="user_name fl">{{ comment.user.nick_name }}</div>
+                    <div class="comment_text fl">
+                        {{ comment.content }}
+                    </div>
+                    {# 判断是否有父评论 #}
+                    {% if comment.parent %}
+                        <div class="reply_text_con fl">
+                            <div class="user_name2">{{ comment.parent.user.nick_name }}</div>
+                            <div class="reply_text">
+                                {{ comment.parent.content }}
+                            </div>
+                        </div>
+                    {% endif %}
+
+                    <div class="comment_time fl">{{ comment.create_time }}</div>
+                    {# 点赞处理 #}
+                    <a href="javascript:;" class="comment_up {% if comment.is_like %}has_comment_up{% endif %} fr"
+                       data-commentid="{{ comment.id }}" data-likecount="{{ comment.like_count }}">
+                        {% if comment.like_count > 0 %}
+                            {{ comment.like_count }}
+                        {% else %}
+                            赞
+                        {% endif %}
+                    </a>
+
+
+
+                    <a href="javascript:;" class="comment_reply fr">回复</a>
+                    <from class="reply_form fl" data-newsid="{{ comment.news_id }}" data-commentid="{{ comment.id }}">
+                        <textarea  class="reply_input"></textarea>
+                        <input type="submit" name="" value="回复" class="reply_sub fr">
+                        <input type="reset" name="" value="取消" class="reply_cancel fr">
+                    </from>
+                </div>
+            {% endfor %}
+
+
+
+            {#
             <div class="comment_list">
                 <div class="person_pic fl">
                     <img src="../../static/news/images/worm.jpg" alt="用户图标">
@@ -126,6 +184,8 @@
                     <input type="reset" name="" value="取消" class="reply_cancel fr">
                 </from>
             </div>
+
+            #}
         </div>
 
 
@@ -153,11 +213,13 @@
 {#    <link rel="stylesheet" type="text/css" href="../../static/news/css/reset.css">#}
 {#    <link rel="stylesheet" type="text/css" href="../../static/news/css/main.css">#}
 {#    <script type="text/javascript" src="../../static/news/js/jquery-1.12.4.min.js"></script>#}
-{#    <script type="text/javascript" src="../../static/news/js/detail.js"></script>#}
 {#    <script type="text/javascript" src="../../static/news/js/main.js"></script>#}
+{#    <script type="text/javascript" src="../../static/news/js/detail.js"></script>#}
 {#</head>#}
 {#<body>#}
 {#    <div class="header_con">#}
+{##}
+{##}
 {#        <div class="header">#}
 {#            <a href="#" class="logo fl"><img src="../../static/news/images/logo.png" alt="logo"></a>#}
 {#            <div class="user_btns fr">#}
@@ -171,7 +233,7 @@
 {#            </div>#}
 {#        </div>#}
 {#    </div>#}
-{#    #}
+{##}
 {#    <div class="conter_con">#}
 {#        <div class="detail_con fl">#}
 {#            <h3>恒指创收盘历史新高 沪指创逾2个月来新高 房地产板块集体爆发</h3>#}
@@ -200,11 +262,11 @@
 {#此外，中国平安港股股价再创历史新高，盘中一度触及91.00港元。中国平安在A股市场今天也一度上涨近2%，离历史高点仅一步之遥，但收盘时回落，最终收涨0.2%。</p>#}
 {#<p>#}
 {#昨天晚间，中国平安公布2017年保费收入，全年该集团控股子公司平安财险、平安人寿、平安养老、平安健康原保险合同保费收入分别为2159.84亿元、3689.34亿元、175.6亿元及21.47亿元，合计约6046.26亿元人民币，同比增28.9%。除此以外，市场传出中国平安旗下的陆金所将于4月分拆于香港上市，估值达600亿美元。</p>#}
-{#            #}
-{#            #}
+{##}
+{##}
 {#        <a href="javascript:;" class="collection block-center">收藏</a>#}
 {#        <a href="javascript:;" class="collected block-center" style="display: none"><span class="out">已收藏</span><span class="over">取消收藏</span></a>#}
-{#        #}
+{##}
 {##}
 {#        <div class="comment_form_logout">#}
 {#            登录发表你的评论#}
@@ -222,7 +284,7 @@
 {#        <div class="comment_count">#}
 {#            4条评论#}
 {#        </div>#}
-{#        #}
+{##}
 {#        <div class="comment_list_con">#}
 {#            <div class="comment_list">#}
 {#                <div class="person_pic fl">#}
@@ -302,8 +364,8 @@
 {#                </from>            #}
 {#            </div>#}
 {#        </div>#}
-{#            #}
-{#            #}
+{##}
+{##}
 {#        </div>#}
 {#        <div class="rank_con fr">#}
 {#            <div class="author_card">#}
@@ -343,7 +405,7 @@
 {#电话：010-****888    京ICP备*******8号#}
 {#        </p>#}
 {#    </div>#}
-{#    #}
+{##}
 {#    <!-- 登录表单 -->#}
 {#    <form class="login_form_con">#}
 {#        <div class="login_form">#}
@@ -364,7 +426,7 @@
 {#        </div>#}
 {#        <div class="mask"></div>#}
 {#    </form>#}
-{#    #}
+{##}
 {#    <!-- 注册表单 -->#}
 {#    <form class="register_form_con">#}
 {#        <div class="register_form">#}
