个人中心展示

--- a/info/templates/news/base.html
+++ b/info/templates/news/base.html
@@ -35,7 +35,7 @@
                         <img src="../../static/news/images/person01.png" class="lgin_pic">
                     {% endif %}
 
-                    <a href="#">{{ data.user_info.nick_name }}</a>
+                    <a href="/user/show_user_info">{{ data.user_info.nick_name }}</a>
                     <a href="#" onclick="logout()">退出</a>
                 </div>
             {% else %}
